--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
         </div>
     </header>
     <main>
+
         <section class="container">
-                
+            <div class="container__info">
+                <p class="container__heading">Чіп Чендж</p>
+                <p class="container__txt">Обмінник валют - навчальний</p>
+                <a href="#" class="container__button">Конвертер валют</a>
+            </div>
+            <img class="container__card" src="img/mastercard.png" alt="Банківська карта">
         </section>
+
+<!--        <section class="content">
+            <div class="content__info">
+                <p class="content__heading">Конвертер валют</p>
+                <p class="container__txt">Переважна діяльність банківської групи за останні чотири звітні квартали становить 50 і більше відсотків.</p>
+            </div>
+
+        </section> /!-->
     </main>
 </body>
 </html>
