--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         </div>
     </header>
     <main>
-
         <section class="container">
             <div class="container__info">
                 <p class="container__heading">Чіп Чендж</p>
@@ -41,13 +40,20 @@
             <img class="container__card" src="img/mastercard.png" alt="Банківська карта">
         </section>
 
-<!--        <section class="content">
+        <section class="content">
             <div class="content__info">
                 <p class="content__heading">Конвертер валют</p>
-                <p class="container__txt">Переважна діяльність банківської групи за останні чотири звітні квартали становить 50 і більше відсотків.</p>
+                <p class="content__txt">Переважна діяльність банківської групи за останні чотири звітні квартали становить 50 і більше відсотків.</p>
+                <a href="#" class="content__button">Конвертувати валюту</a>
             </div>
-
-        </section> /!-->
+            <img class="content__card" src="img/black_card.png" alt="Банківська карта у руці">
+        </section> 
     </main>
+    <footer>
+        <div class="footer__info">
+            
+
+        </div>
+    </footer>
 </body>
 </html>
