--- a/index.html
+++ b/index.html
@@ -51,8 +51,43 @@
     </main>
     <footer>
         <div class="footer__info">
-            
+            <div class="footer__info__logo">
+                <a href="index.html"><img class="logo__image" src="img/logo.png" alt="Логотип"></a>
+                <a href="index.html" class="footer__info__logo--txt">Чіп Чендж</a>
+            </div>
+            <p class="footer__info__txt">04128, м.Київ, вул. Хрещатик, 19 <br> Ліцензія НБУ №156 <br> Ⓒ ПАТ ЧіпЧендж, 2019-2023</p>
+        </div>
 
+        <nav>
+            <ul class="footer__menu">
+                <li><a class="footer__menu__item" href="#">Послуги</a></li>
+                <li><a class="footer__menu__item" href="#">Конвертер валют</a></li>
+                <li><a class="footer__menu__item" href="#">Контакти</a></li>
+                <li><a class="footer__menu__item" href="#">Задати питання</a></li>
+            </ul>
+        </nav>
+
+        <div class="footer__support">
+            <div class="footer__support__flex">
+                <img class="footer__support__img" src="img/phone.png" alt="Мобільний телефон">
+                <p class="footer__support__number">3773</p>
+            </div>
+            <p class="footer__support__txt">Цілодобова підтримка</p>
+        </div>
+
+        <div class="footer__telephone">
+            <div class="footer__telephone__flex">
+                <img class="footer__telephone__img" src="img/Vector.png" alt="Мобільний телефон">
+                <p class="footer__telephone__number">8 800 111 22 33</p>
+            </div>
+            <p class="footer__telephone__txt">Безкожтовно для дзвінків в межах України</p>
+        </div>
+
+        <div class="footer__social">
+            <a target="_blank" href="https://www.facebook.com/"><img class="footer__social__img" src="img/facebook.png" alt="Facebook"></a>
+            <a target="_blank" href="https://www.instagram.com/"><img class="footer__social__img" src="img/instagram.png" alt="Instagram"></a>
+            <a target="_blank" href="https://x.com/i/flow/login"><img class="footer__social__img" src="img/twitter.png" alt="Twitter"></a>
+            <a target="_blank" href="https://www.youtube.com/"><img class="footer__social__img" src="img/yt.png" alt="YouTube"></a>
         </div>
     </footer>
 </body>
